cloudformation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS CloudFormation template for TimeOff-Management Application'
Resources:
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0873b46c45c11058d
      InstanceType: t2.micro
      SecurityGroups:
      - Ref: WebServerSecurityGroup
      KeyName: infragsoft
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          set -e -u
          sudo yum update -y
          wget https://raw.githubusercontent.com/dvillarraga/timeoff-provision/master/ec2-provision/amazon-linux-2-provision.sh -O /tmp/ami-provision.sh
          sudo chmod +x /tmp/ami-provision.sh
          /tmp/ami-provision.sh install
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for TimeOff-Application"
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: '3000'
        IpProtocol: tcp
        ToPort: '3000'
      - CidrIp: 0.0.0.0/0
        FromPort: '22'
        IpProtocol: tcp
        ToPort: '22'
  CodeBuildRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          Effect: Allow
          Principal:
            Service: codebuild.amazonaws.com
          Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess
  ApplicationCi:
    Type: AWS::CodeBuild::Project
    DependsOn: CodeBuildRole
    Properties:
      Name: GorillaTestCi
      Artifacts:
        Type: NO_ARTIFACTS
      Environment:
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/amazonlinux2-x86_64-standard:2.0
        Type: LINUX_CONTAINER
      ServiceRole: !Ref CodeBuildRole
      TimeoutInMinutes: 15
      Source:
        Type: GITHUB
        Location: https://github.com/dvillarraga/timeoff-management-application.git
      Triggers:
        Webhook: true
        FilterGroups:
          - - Type: EVENT
              Pattern: PUSH
Outputs:
  PublicIP:
    Description: EC2 public IP
    Value: !GetAtt WebServer.PublicIp
